refactored code to run basic apis
